<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.temperatureapp.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_gravity="left"
        android:text="@string/textConvert"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_column="0"
        android:layout_row="2" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textFrom"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/textTo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textFahrenheit" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textFahrenheit" />

    </LinearLayout>

    <LinearLayout
        android:layout_column="0"
        android:layout_row="4" >

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textCelsius" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textCelsius" />

    </LinearLayout>

    <LinearLayout
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5" >

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textKelvin" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textKelvin" />

    </LinearLayout>

    <LinearLayout
        android:layout_column="0"
        android:layout_row="6" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/textConvert" />

    </LinearLayout>

    <LinearLayout
        android:layout_column="0"
        android:layout_row="7" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</GridLayout>
